<resources>
    <string name="app_name">CodeForces Viewer</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="online_indicator">Online Indicator</string>

    <!--    codeforces titles-->
    <string name="Newbie">newbie</string>
    <string name="Pupil">pupil</string>
    <string name="Specialist">specialist</string>
    <string name="Expert">expert</string>
    <string name="CandidateMaster">candidate master</string>
    <string name="Master">master</string>
    <string name="InternationalMaster">international master</string>
    <string name="Grandmaster">grandmaster</string>
    <string name="InternationalGrandmaster">international grandmaster</string>
    <string name="LegendaryGrandmaster">legendary grandmaster</string>

    <!--    user info strings-->
    <string name="codeforces_handle">CodeForces Handle</string>
    <string name="stalk_profile">Stalk Profile</string>
    <string name="global_rank">Global Rank</string>
    <string name="country_rank">Country Rank</string>
    <string name="current_rating">Current Rating</string>
    <string name="registered">Registered</string>
    <string name="friend_of">Friend of</string>
    <string name="contribution">Contribution</string>
    <string name="organization">Organization</string>
    <string name="name">Name</string>
    <string name="max_rank">Best Title</string>
    <string name="city_country">City, Country</string>

    <!--    card titles-->
    <string name="rated_contests">Rated Contests</string>
    <string name="rated_contests_details">Rated Contests Details</string>
    <string name="problems_solved_by_difficulty">Problems Solved by Difficulty</string>
    <string name="problems_solved_by_index">Problems Solved by Index</string>
    <string name="user_information">User Information</string>
    <string name="rating_graph">Rating Graph</string>


    <!--    submission verdicts-->
    <string name="submission_accepted">OK</string>
    <string name="submission_wrong_answer">WRONG_ANSWER</string>
    <string name="submission_compilation_error">COMPILATION_ERROR</string>
    <string name="submission_time_limit_exceeded">TIME_LIMIT_EXCEEDED</string>
    <string name="submission_runtime_error">RUNTIME_ERROR</string>
    <string name="submission_memory_limit_exceeded">MEMORY_LIMIT_EXCEEDED</string>
    <string name="submission_idleness_limit_exceeded">IDLENESS_LIMIT_EXCEEDED</string>

</resources>